css/helper/fancyAnchor.css
a.fancy {
  text-decoration: none;
  line-height: 1.15;
  position: relative;
  margin: 0 -0.1em;
  padding: 0 0.1em;
  transition: color 150ms;
  z-index: 1;
}

a.fancy::before {
  content: '';
  display: block;
  background-color: var(--contrast-d);
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 1px;
  transition: background 150ms, height 150ms;
  z-index: -1;
}

a.fancy:is(:hover, :focus-visible) {
  color: var(--bg);
}

a.fancy:is(:hover, :focus-visible)::before {
  content: '';
  background-color: var(--fg);
  height: 100%;
}

a.fancy:active::before {
  background-color: var(--contrast-d);
  transition: none;
}

